Bug 160990 - Page up/down scrolls message content pane too far when there are attachments
Summary: Page up/down scrolls message content pane too far when there are attachments
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.9.6
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-04-18 21:34 UTC by Chris Pimlott
Modified: 2009-10-08 00:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
First testcase - no lines skipped (65.27 KB, image/png)
2008-04-18 22:18 UTC, Chris Pimlott
Details
Second testcase screenshot - 3 lines skipped (61.91 KB, image/png)
2008-04-18 22:20 UTC, Chris Pimlott
Details
Third testcase screenshot - 3 lines skipped (51.30 KB, image/png)
2008-04-18 22:20 UTC, Chris Pimlott
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Pimlott 2008-04-18 21:34:53 UTC
Version:           1.9.6 (using KDE 3.5.8)
Installed from:    Ubuntu Packages

When there are attachments to a message, causing an extra attachments pane to be displayed below the content pane, using page up and page down to scroll through the message scrolls too many lines, skipping about a line and half.

Scrolling via the space bar, or by clicking above/below the bar in the scrollbar, scroll by different amounts and do not skip any lines.  This makes this bug different than 98712.
Comment 1 Chris Pimlott 2008-04-18 22:18:36 UTC
Created attachment 24392 [details]
First testcase - no lines skipped
Comment 2 Chris Pimlott 2008-04-18 22:20:07 UTC
Created attachment 24393 [details]
Second testcase screenshot - 3 lines skipped
Comment 3 Chris Pimlott 2008-04-18 22:20:48 UTC
Created attachment 24394 [details]
Third testcase screenshot - 3 lines skipped
Comment 4 Chris Pimlott 2008-04-18 22:35:42 UTC
Some updates - this is referring to the message preview pane of the main window, not the message content pane of an individual message window.

Secondly, I have noticed the amount of lines scrolls (and thus lines skipped) varies depending on the size of the message preview pane.  I have uploaded three screenshots showing the amount of space scrolled for a single page-down with three different message preview pane sizes.

Lastly, a similar effect occurs if there are no attachments (and thus no attachments pane); however, in this situation there is enough "padding" that no lines are actually skipped.  E.g., with the message preview pane sized as in the first screenshot, 5 lines are repeated; with the pane sized similar to the third screenshot, around 1.5 lines are repeated.
Comment 5 FiNeX 2009-04-04 11:47:43 UTC
I'm not able to reproduce this bug on KDE 4 (trunk r948595).
Comment 6 Patrick 2009-08-21 03:59:23 UTC
When I scroll with Page-Down or the spacebar in KMail 1.12.0 (KDE 4.3.0)'s message preview, it always scrolls *exactly* one page. That means I often can't read the last (and then first) line without scrolling up again, because at first I may only have seen the top half, then I only see the bottom half. Very annoying.
Comment 7 Martin Koller 2009-08-30 19:37:27 UTC
SVN commit 1017452 by mkoller:

BUG: 160990

When scrolling one page, use 80% of the available height of the current
view (not the height of the complete widget including the message structure viewer)


 M  +2 -2      kmreaderwin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1017452
Comment 8 András Manţia 2009-09-07 19:04:50 UTC
SVN commit 1020944 by amantia:

Merge r1017452:

BUG: 160990

When scrolling one page, use 80% of the available height of the current
view (not the height of the complete widget including the message structure viewer)

 M  +2 -2      kmreaderwin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1020944
Comment 9 Patrick 2009-10-08 00:26:04 UTC
Despite this bug being mentioned as fixed in the Changelog (http://www.kde.org/announcements/changelogs/changelog4_3_1to4_3_2.php), it doesn't seem to be fixed for me.

The *preview pane* still scrolls 100%, not 80%, which makes the great 'press space bar often to read all your new mails' feature less useful.