BUG: 160990

When scrolling one page, use 80% of the available height of the current
view (not the height of the complete widget including the message structure viewer)

svn path=/trunk/KDE/kdepim/; revision=1017452